src/test/deca/syntax/parser/invalid/decl_var_multiple_number.deca
// Parser test, second identifier replaced by a number

{
    int x, 15 = 5,8;
}